...
        { title: "Penghargaan", url: "#" },
        { title: "Buku", url: route("app.penghargaan.buku.index") },
        { title: "Ajukan", url: "#" },
    ];

    const { data, setData, post, processing, errors } = useForm({
        judul: "",
        penulis: "",
        penerbit: "",
        level_penerbit: "",
        tahun: new Date().getFullYear(),
        isbn: "",
        kategori: "",
        jumlah_halaman: "",
        bidang_keilmuan: "",
    });

    function handleSubmit(e) {
        e.preventDefault();
        post(route("app.penghargaan.buku.store"));
...
                    </Alert>
                )}

                <Card>
                    <CardHeader>
                        <CardTitle>
                            Formulir Pengajuan Penghargaan Buku
                        </CardTitle>
                        <CardDescription>
                            Lengkapi data buku secara detail sesuai dengan fisik
                            buku.
                        </CardDescription>
                    </CardHeader>
...
                                    value={data.bidang_keilmuan}
                                    onValueChange={(val) =>
                                        setData("bidang_keilmuan", val)
                                    }
                                >
                                    <SelectTrigger>
                                        <SelectValue placeholder="Pilih bidang keilmuan" />
                                    </SelectTrigger>
                                    <SelectContent>
                                        <SelectItem value="Teknik Metalurgi">
                                            Teknik Metalurgi
                                        </SelectItem>
                                        <SelectItem value="Sistem Informasi">
                                            Sistem Informasi
                                        </SelectItem>
                                        <SelectItem value="Teknik Elektro">
                                            Teknik Elektro
                                        </SelectItem>
                                        <SelectItem value="Teknik Bioproses">
...
                                        value={data.level_penerbit}
                                        onValueChange={(val) =>
                                            setData("level_penerbit", val)
                                        }
                                    >
                                        <SelectTrigger>
                                            <SelectValue placeholder="Pilih tingkat" />
                                        </SelectTrigger>
                                        <SelectContent>
                                            <SelectItem value="NATIONAL">
                                                Nasional
                                            </SelectItem>
                                            <SelectItem value="NATIONAL_ACCREDITED">
                                                Nasional Terakreditasi
                                            </SelectItem>
                                            <SelectItem value="INTERNATIONAL">
                                                Internasional
                                            </SelectItem>
                                        </SelectContent>
                                    </Select>
...
                                        value={data.kategori}
                                        onValueChange={(val) =>
                                            setData("kategori", val)
                                        }
                                    >
                                        <SelectTrigger>
                                            <SelectValue placeholder="Pilih kategori" />
                                        </SelectTrigger>
                                        <SelectContent>
                                            <SelectItem value="TEACHING">
                                                Buku Ajar
                                            </SelectItem>
                                            <SelectItem value="REFERENCE">
                                                Buku Referensi
                                            </SelectItem>
                                            <SelectItem value="MONOGRAPH">
                                                Monograf
...
